--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "azure-nodejs-example",
-  "engines":{"node": "0.6.22 || 0.8.x"},
+  "engines": {
+    "node": "0.6.22 || 0.8.x"
+  },
   "version": "1.0.0",
   "description": "test Nodejs in Microsoft Azure Web App Service",
   "main": "server.js",
